Fixed header overflow

--- a/assets/css/cmps/AppHeader.css
+++ b/assets/css/cmps/AppHeader.css
@@ -16,7 +16,7 @@ header {
 
 .icon {
     font-size: 3em;
-    padding: 15px;
+    padding: 3px;
 }
 
 nav a {
